azure/arm/Aug23/ntier/azurdeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "networkRange": {
            "type": "string",
            "metadata": {
                "description": "This defines the address space of network"
            },
            "defaultValue": "10.10.0.0/16"
        },
        "subnetRanges": {
            "type": "array",
            "metadata": {
                "description": "This describes subnet ranges"
            },
            "defaultValue": [ "10.10.0.0/24", "10.10.1.0/24", "10.10.2.0/24" ]
        },
        "subnetNames": {
            "type": "array",
            "metadata": {
                "description": "This provides subnet names"
            },
            "defaultValue": [ "web", "app", "db" ]
        },
        "appnsginfo": {
            "type": "object",
            "metadata": {
                "description": "description"
            },
            "defaultValue": {
                "name": "appnsg",
                "securityrules": [
                    {
                        "name": "openhttps",
                        "access": "Allow",
                        "description": "Open https port",
                        "destinationAddressPrefix": "*",
                        "destinationPortRange": "443",
                        "direction": "Inbound",
                        "priority": 300,
                        "protocol": "Tcp",
                        "sourceAddressPrefix": "*",
                        "sourcePortRange": "*"
                    },
                    {
                        "name": "openssh",
                        "access": "Allow",
                        "description": "Open ssh port",
                        "destinationAddressPrefix": "*",
                        "destinationPortRange": "22",
                        "direction": "Inbound",
                        "priority": 310,
                        "protocol": "Tcp",
                        "sourceAddressPrefix": "*",
                        "sourcePortRange": "*"
                    }
                ]
            }
        },
        "password": {
            "type": "securestring",
            "metadata": {
                "description": "The password"
            }
        },
        "username": {
            "type": "string",
            "metadata": {
                "description": "username"
            }
        },
        "ubuntuOSVersion": {
            "type": "string",
            "defaultValue": "Ubuntu-2004",
            "allowedValues": [
                "Ubuntu-1804",
                "Ubuntu-2004",
                "Ubuntu-2204"
            ],
            "metadata": {
                "description": "The Ubuntu version for the VM. This will pick a fully patched image of this given Ubuntu version."
            }
        },
        "vmSize": {
            "type": "string",
            "defaultValue": "Standard_B1s",
            "metadata": {
                "description": "The size of the VM"
            }
        },
        "dbpassword": {
            "type": "securestring",
            "metadata": {
                "description": "The password"
            }
        },
        "dbusername": {
            "type": "string",
            "metadata": {
                "description": "username"
            }
        }
    },
    "variables": {
        "networkName": "ntier",
        "imageReference": {
            "Ubuntu-1804": {
                "publisher": "Canonical",
                "offer": "UbuntuServer",
                "sku": "18_04-lts-gen2",
                "version": "latest"
            },
            "Ubuntu-2004": {
                "publisher": "Canonical",
                "offer": "0001-com-ubuntu-server-focal",
                "sku": "20_04-lts-gen2",
                "version": "latest"
            },
            "Ubuntu-2204": {
                "publisher": "Canonical",
                "offer": "0001-com-ubuntu-server-jammy",
                "sku": "22_04-lts-gen2",
                "version": "latest"
            }
        },
        "osDiskType": "Standard_LRS"

    },
    "resources": [
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2022-09-01",
            "name": "[variables('networkName')]",
            "location": "[resourceGroup().location]",
            "tags": {
                "env": "dev"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [ "[parameters('networkRange')]" ]
                }
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "2022-09-01",
            "name": "[format('{0}/{1}',variables('networkName'), parameters('subnetNames')[copyIndex()])]",
            "properties": {
                "addressPrefix": "[parameters('subnetRanges')[copyIndex()]]"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks',variables('networkName'))]"
            ],
            "copy": {
                "name": "subnetCopy",
                "count": "[length(parameters('subnetRanges'))]",
                "mode": "Serial"
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2022-09-01",
            "name": "webnsg",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowHttps",
                        "properties": {
                            "access": "Allow",
                            "description": "Open https port",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "443",
                            "direction": "Inbound",
                            "priority": 300,
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*"
                        }
                    },
                    {
                        "name": "Allowssh",
                        "properties": {
                            "access": "Allow",
                            "description": "Open https port",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "22",
                            "direction": "Inbound",
                            "priority": 310,
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*"
                        }
                    },
                    {
                        "name": "AllowHttp",
                        "properties": {
                            "access": "Allow",
                            "description": "Open https port",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "80",
                            "direction": "Inbound",
                            "priority": 320,
                            "protocol": "Tcp",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*"
                        }
                    }
                ]

            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2022-09-01",
            "name": "appnsg",
            "location": "[resourceGroup().location]",
            "properties": {}
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "2022-09-01",
            "name": "[format('{0}/{1}',parameters('appnsginfo').name,parameters('appnsginfo').securityrules[copyIndex()].name)]",
            "properties": {
                "access": "[parameters('appnsginfo').securityrules[copyIndex()].access]",
                "description": "[parameters('appnsginfo').securityrules[copyIndex()].description]",
                "destinationAddressPrefix": "[parameters('appnsginfo').securityrules[copyIndex()].destinationAddressPrefix]",
                "destinationPortRange": "[parameters('appnsginfo').securityrules[copyIndex()].destinationPortRange]",
                "direction": "[parameters('appnsginfo').securityrules[copyIndex()].direction]",
                "priority": "[parameters('appnsginfo').securityrules[copyIndex()].priority]",
                "protocol": "[parameters('appnsginfo').securityrules[copyIndex()].protocol]",
                "sourceAddressPrefix": "[parameters('appnsginfo').securityrules[copyIndex()].sourceAddressPrefix]",
                "sourcePortRange": "[parameters('appnsginfo').securityrules[copyIndex()].sourcePortRange]"
            },
            "copy": {
                "count": "[length(parameters('appnsginfo').securityrules)]",
                "name": "appnsgsrcopy",
                "mode": "Serial"
            },
            "dependsOn": [ "[resourceId('Microsoft.Network/networkSecurityGroups', 'appnsg')]" ]

        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2022-09-01",
            "name": "webip",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "properties": {
                "publicIPAllocationMethod": "Static"
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2022-09-01",
            "name": "webnic",
            "location": "[resourceGroup().location]",
            "properties": {
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups','webnsg')]"
                },
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses','webip')]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets',variables('networkName'),parameters('subnetNames')[0])]"
                            }

                        }
                    }
                ]
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets',variables('networkName'),parameters('subnetNames')[0])]",
                "[resourceId('Microsoft.Network/publicIPAddresses','webip')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups','webnsg')]"
            ]
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2022-11-01",
            "name": "webvm",
            "location": "[resourceGroup().location]",
            "properties": {
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces','webnic')]"
                        }
                    ]
                },
                "hardwareProfile": {
                    "vmSize": "[parameters('vmSize')]"
                },
                "osProfile": {
                    "adminPassword": "[parameters('password')]",
                    "adminUsername": "[parameters('username')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "computerName": "webvm"

                },
                "storageProfile": {
                    "osDisk": {
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "[variables('osDiskType')]"
                        }
                    },
                    "imageReference": "[variables('imageReference')[parameters('ubuntuOSVersion')]]"
                }
            },
            "dependsOn": [ "[resourceId('Microsoft.Network/networkInterfaces','webnic')]" ]
        },
        {
            "type": "Microsoft.Sql/servers",
            "apiVersion": "2022-05-01-preview",
            "name": "ntiersrvlt",
            "location": "[resourceGroup().location]",
            "properties": {
                "administratorLogin": "[parameters('dbusername')]",
                "administratorLoginPassword": "[parameters('dbpassword')]",
                "publicNetworkAccess": "enabled"
            }
        },
        {
            "type": "Microsoft.Sql/servers/databases",
            "apiVersion": "2022-05-01-preview",
            "name": "ntiersrvlt/emp",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Basic",
                "size": "2",
                "tier": "Basic"
            },
            "properties":{

            },
            "dependsOn": [
                "[resourceId('Microsoft.Sql/servers', 'ntiersrvlt')]"]
        }

    ]
}
